##
##
##  This program is free software: you can redistribute it and/or modify
##  it under the terms of the GNU General Public License as published by
##  the Free Software Foundation, either version 3 of the License, or
##  (at your option) any later version.
##
##  This program is distributed in the hope that it will be useful,
##  but WITHOUT ANY WARRANTY; without even the implied warranty of
##  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##  GNU General Public License for more details.
##
##  You should have received a copy of the GNU General Public License
##  along with this program.  If not, see <http://www.gnu.org/licenses/>.
##

pyFormex 0.8  Releasenotes
==========================

This is a collection of the most prominent changes in pyFormex 0.8
compared to the previous release 0.7.3


Installation
------------



Command line
------------

- In GUI mode, pyFormex scripts passed on the command line will now also be processed.

Configuration
-------------
- The pyFormex user configuration files have been moved to a directory ~/.pyformex


Core
----
- Formex:
  + Formex transformation preserve the 'eltype' attribute
  + New transformations: mirror, centered, resized
  + Deprecated 'readfile'

- All script executing functionality is moved to script.py
- The GUI can now be started from a nongui script
- mydict.py: changed the pickling to allow non-ascii pickling of projects
- olist.py: new module gathering list functions
- odict.py: new class KeyList


Gui
---


Drawing
-------


Scripting
---------


Plugins
-------

Examples
--------


Manual
------
- The reference manual has been expanded largely with automatically generated documentation from the Python source docstrings. 


Project Status
--------------
We have upgraded the project status to Beta. This is a clear sign to the user that we have reached a status where the program has become largely usable, despite some still missing or unfinished functions.
